package Part2_DesignPattern.Behavioral.Observer.CA6;

public interface PlayerDataListener {
    void listen(PlayerData playerData);
}
